--- a/package.json
+++ b/package.json
@@ -70,6 +70,9 @@
     "*.js": [
       "prettier --write"
     ],
+    "*.json": [
+      "prettier --write"
+    ],
     "*.less": [
       "prettier --write"
     ]
